--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ViewnextDatabase": "Data source=db-server;Initial Catalog=ViewNext;User Id=sa;Password=Nick1234;"
+    "ViewnextDatabase": "Data source=db-server;Encrypt=False;Initial Catalog=ViewNext;User Id=sa;Password=Nick1234"
   },
     "Logging": {
       "LogLevel": {
